# linkedin-ai-jobs-scraper

./: .gitignore  config.yaml  jobs.json  linkedin_scraper_min.py  linkedin_scraper_min_v2.py  pyproject.toml
jobbot/app/: cli.py  config.py  linkedin_client.py  models.py  pipeline.py
